# spp

./: CMakeLists.txt
cmake/: external_projects.cmake
sample_data/: .gitignore  example_spp3.json
src/: debug.hpp  io.hpp  point.hpp  priority_container.hpp  rectangle.hpp  rectangular.hpp  size.hpp  spp3.hpp  util.hpp
src/debug/: debug_impl.hpp
src/io/: io.cpp  io_impl.hpp
src/main/: spp3.cpp
src/rectangular/: rectangular.cpp  rectangular_impl.hpp
src/spp3/: rectangular.hpp  spp3.cpp  spp3_impl.hpp
src/spp3/rectangular/: hash.hpp  rectangular.cpp  rectangular_impl.hpp
src/spp3/rectangular/hash/: hash_impl.hpp
src/util/: priority_container.hpp  util_impl.hpp
src/util/priority_container/: priority_container_impl.hpp
test/: CMakeLists.txt  gtest.cmake
test/io/: CMakeLists.txt  input_test.cpp  output_test.cpp
test/spp3/: CMakeLists.txt  rectangular_test.cpp  spp3_test.cpp
